--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -24,25 +24,25 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160" rowspan="2"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="/francais/FAQ.htm"><img src="/images/selector-french.gif" width="50" height="18" border="0"></a></font></font></b></font></font></b><img src="/images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="/FAQ.htm"><img src="/images/selector-english.gif" width="45" height="18" border="0"></a></font></font></b></font></font></b></font></font></b></font><!-- #EndEditable --></font></b></font></td>
+    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a></font></font></b></font></font></b><img src="images/selector-divider.gif" width="10" height="17"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><a href="FAQ.htm"><img src="images/selector-english.gif" width="45" height="18" border="0"></a></font></font></b></font></font></b></font></font></b></font><!-- #EndEditable --></font></b></font></td>
   </tr>
   <tr> 
     <td colspan="2" align="right" valign="bottom"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->FAQ&nbsp;<!-- #EndEditable -->&nbsp;</b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"><!-- #BeginEditable "Text" --><p>Last update; January, 24, 2001
+    <td colspan="3"><!-- #BeginEditable "Text" --><p>Last update; January, 25, 2001
       <p> 
       <h1>Introduction</h1>
       <p> 
@@ -85,7 +85,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h3><br>
         <i> Mark Rejhon</i></h3>
       <p>As of version 1.07, Mark is the project admin. He is also the moderator 
-        of the Internet's largest Home Theater Computers forum at <a href="www.avsforum.com">AVSFORUM</a>. 
+        of the Internet's largest Home Theater Computers forum at <a href="http://www.avsforum.com/">AVSFORUM</a>. 
         Mark authored the 3:2 pulldown algorithm that forms the basis of the algorithm 
         implemented into dTV by JohnAd. He also does other programming tasks like 
         code cleanup, merging, documenting, testing, enhancing of contributors' 
@@ -117,7 +117,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <a name="THANKS"></a>
       <h3>Thanks to those various helping hands</h3>
       <p> 
-      <p>See <a href="/MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a list 
+      <p>See <a href="Thanks_MultiDec.txt"> MultiDec_ReadMe.txt</a> for a list 
         of thanks for the project dTV was based upon.</p>
       <ol>
         <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 alogirthm 
@@ -153,7 +153,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>Should I use dTV to deinterlace the output from my set-top dvd player 
         ?</h2>
       <p> While it's feasable and works quite fine (see the "dTV Windvd challenge" 
-        in the <a href="/screenshots.htm">screenshots</a> section), home theater 
+        in the <a href="screenshots/index.htm">screenshots</a> section), home theater 
         pc's have shown the best results while using dvd decoding software along 
         with a dvd-rom and a modern graphic card. However, it's been used quite 
         often for test purposes (testing of grab quality on a high quality source, 
@@ -162,36 +162,36 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h1>Software issues</h1>
       <p> 
       <h2>Which operating system can I use dTV on ?</h2>
-      <p> Windows 95 ok<br>
-        Windows 98 ok<br>
-        Windows NT ok <i>requires that a VxD runs in ring-0 (nt ultra low level 
-        part of the os)</i><br>
-        Windows Me ok <i>tested with an Hauppage 401 without problem</i><br>
-        Windows 2000 ok<br>
+      <p> Windows 95 ok <i>uses VxD running in ring-0</i><br>
+      Windows 98 ok <i>uses VxD running in ring-0</i><br>
+      Windows NT ok <i>uses sys running in ring-0</i><br>
+        Windows Me ok <i>uses VxD running in ring-0</i><br>
+        Windows 2000 ok <i>uses sys running in ring-0</i><br>
         Linux no<br>
         OS/2 definitely no ;-) 
-      <p> 
       <h2>What are all those deinterlace algorithms ?</h2>
-      <p><br>
       <h3>Video Deinterlace (Bob)</h3>
-      <p> This method is just a simple bob method used when dTV determines that 
-        the changes between the odd and even fields are extreme. This method will 
-        result in jitter (on static parts of the image) and jagged edges on diagonal 
-        lines. 
-      <h3>Simple Weave</h3>
-      <p> This method will weave the even and odd field if dTV determines that 
-        the changes between them are not severe. Setting dTV to always use this 
-        method will result in video playback that is almost identical to viewing 
-        on interlaced displays. 
+      <p> This method is based on Gunnar Thalin's VirtualDub filter.&nbsp; If it
+      detects weaving artifacts in the current image it uses bob to get rid of
+      them.&nbsp; This method has a tendency to bob rather too much and gives
+      poor results on fine static images. 
       <h3>Video Deinterlace (Weave)</h3>
-      <p> Similar to the above Simple Weave, with an enhancement. The method is 
-        enhanced by modifying the pixels that dTV determines is different enough 
-        than the pixel above and below it. 
-      <h3>Interpolated Bob</h3>
-      <p> As far as I can read the code, I don't see this method being used at 
-        all. If any developers can rectify this, please do. 
+      <p> Similar to Video Deinterlace (Bob), however this method has a tendency
+      to weave on moving images. 
+      <h3>Video Deinterlace (2-Frame)</h3>
+      <p>This method uses the current frame and the last two to determine
+      whether to bob or weave a given pixel.&nbsp; This gives better results on
+      both stationary and moving images than the above two methods however it
+      uses more CPU. 
+      <h3>Simple Weave</h3>
+      <p> This method just combines the most recent even and odd fields.&nbsp;
+      This causes motion artifacts and is provided for comparison. 
+      <h3>Simple Bob</h3>
+      <p>This uses only the most recent field and fills the lines in between
+      with interpolated pixels.&nbsp; This method has in may ways been superceded
+      by Scaler BOB. 
       <h3>Blended Clip</h3>
-      <p> The BLENDED CLIP DeInterlace method is designed mostly for experimentation 
+      <p> The BLENDED CLIP Deinterlace method is designed mostly for experimentation 
         by those interested in what works for video deinterlacing. When it is 
         selected it will pop up a control panel with many controls to adjust various 
         parameters. These all correspond to Blc... parameters in the [Deinterlace] 
@@ -200,16 +200,27 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         deinterlace methods for special purposes. These can be saved in a separate 
         ini file and invoked by a command line parameter when starting dTV.exe. 
         Somewhat CPU intensive
-      <p> 
+      <h3> Scaler Bob</h3>
+      <p> Uses the DirectDraw hardware bob feature (if available), this uses the
+      current field and lets the video card scaler size the picture to fit the
+      screen.&nbsp; Produces good results for fast moving images.
+      <h3> Even Fields Only<br>
+      Odd Fields Only</h3>
+      <p>These use only one field out of each pair and use hardware
+      scaling.&nbsp; This reduces bob artifacts at the cost of loss of
+      information.&nbsp; These were originally intended to be used with game
+      consoles.<h3>Adaptive Deinterlace</h3>
+      <p>This method uses the amount of motion detected to select the best
+      deinterlacing alogoritm.&nbsp; Currently by default it switches between
+      2-Frame and weave. 
       <h3>Greedy deinterlace method</h3>
-      <p> The GREEDY DeInterlace method is designed to give good results on low 
+      <p> The GREEDY Deinterlace method is designed to give good results on low 
         motion video source, using less CPU than some others. Good on slower machines 
         but it will give awful results on high motion video material like sports. 
         Quite by accident, it can also do a decent job on poorly mastered 3:2 
         or 2:2 pull down film source material like some anime movies, regardless 
         of low or high motion. Try it if you have a movie source that is not giving 
-        good results with normal Auto Pull Down processing.
-      <p> 
+        good results with normal Auto Pull Down processing. 
       <h3>BTV Plugin</h3>
       <p> <i>Deprecated. Included initially to allow usage of video plugins that 
         could have been made for BorgTV (see <a href="#THANKS">thanks</a>)</i>
@@ -252,7 +263,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> Yes you can. dTV is being developped mainly by people using it as an 
         analog source scaler for their projector and they prefer for sure using 
         dTV from their remote on the sofa rather than from their desk ;-)
-      <p> dTV is thus filled with <a href="/keyboard.htm">keyboard shortcuts</a> 
+      <p> dTV is thus filled with <a href="keyboard.htm">keyboard shortcuts</a> 
         for all main options so that you can do everything quickly.<br>
         More, we suggest the use of <a href="http://www.stack.nl/~stilgar/windoze/girder.html">Girder</a> 
         from Ron Bessems as the application of choice for remote controling your 
@@ -303,7 +314,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Guillemot maxi video 3 <a href="http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html">http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html</a> 
         <li>The Pinacle Studio PCTV <a href="http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6">http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6</a> 
       </ul>
-      <p>Take a look at the <a href="/card_support.htm">card list</a>. This will 
+      <p>Take a look at the <a href="card-support/index.htm">card list</a>. This will 
       never be complete so feel free to drop us an email reporting your experience 
       with dTV and your card.</p>
       <p> <i>This list is originally based on the linux bttv driver on which the 
@@ -340,9 +351,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>What is this "purple stripes" issue ?</h2>
       <p> When feeding some analog sources to the combination grab card/dTV, some 
         numerous horizontal colores lines appear on the image.
-      <p> See <a href="/images/Mummy_MacrovisionOn.jpg">this picture</a> where 
+      <p> See <a href="images/Mummy_MacrovisionOn.jpg">this picture</a> where 
         macrovision has been added to the video signal. The same video signal 
-        <a href="/images/Mummy_MacrovisionOff.jpg">without the macrovision protection</a> 
+        <a href="images/Mummy_MacrovisionOff.jpg">without the macrovision protection</a> 
         is perfectly stripes-free.
       <p> This phenomenom seems to be, at least, <b>more visible when a macrovision 
         protected video signal is fed</b> to some grab cards but this has been 
@@ -398,7 +409,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> More and more people are giving dTV a try. Why wouldn't you ? We'd like 
         to know about your experience with it. What does (not) work ? What can 
         be improved, what feature you'd like. Every feedback is useful. 
-      <p> Please have a look, when reporting a problem, to the <a href="/Bugs.htm">bug 
+      <p> Please have a look, when reporting a problem, to the <a href="bugs/Bugs_108.htm">bug 
         list</a>. Report also the hardware you're using, especially video card 
         and grab card. 
       <p> 
@@ -407,9 +418,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         lot of features in it that are simple or that could be easily implemented 
         without knowing anything about 3:2 pulldown detection.
       <p> If you've got an idea, or feel like to trying to implement something 
-        that is already in the <a href="/Todo.htm">Todo list</a>, contact the 
+        that is already in the <a href="Todo.htm">Todo list</a>, contact the 
         authors and join the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
-        list</a>. All relevant infos to get you started are on the <a href="/developers.htm">developers 
+        list</a>. All relevant infos to get you started are on the <a href="developers.htm">developers 
         page</a>. 
       <!-- #EndEditable --></td>
   </tr>
@@ -418,7 +429,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
