--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -23,9 +23,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -33,7 +33,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->About&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -61,7 +61,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         allows some people equipped with data capable projectors to feed them 
         with a progressive scan source that was interlaced right before. 
       <p>The main forum for user discussion is the Home Theater Computers Section 
-        on the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AV Science 
+        on the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi?action=intro&showall=1">AV Science 
         Forum</a>.</p>
       <p>Please see the <a href="downloads.htm">downloads page</a> to download 
         the latest version.</p>
@@ -72,7 +72,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
