--- a/htdocs/francais/FAQ.htm
+++ b/htdocs/francais/FAQ.htm
@@ -24,9 +24,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160" rowspan="2"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -36,7 +36,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="2" align="right" valign="bottom"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->FAQ<!-- #EndEditable -->&nbsp;</b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -120,7 +120,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         à partir de la version 1.9.</p>
       <h3>Autres remerciements</h3>
       <p> 
-      <p>Réferrer vous au fichier <a href="/MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> 
+      <p>Réferrer vous au fichier <a href="../Thanks_MultiDec.txt"> MultiDec_ReadMe.txt</a> 
         pour une liste de remerciements relatifs au projet sur lequel dTV s'est 
         construit.</p>
       <ol>
@@ -241,7 +241,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Guillemot maxi video 3 <a href="http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html">http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html</a> 
         <li>The Pinacle Studio PCTV <a href="http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6">http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6</a> 
       </ul>
-      Jetez un oeil a la page des <a href="/card_support.htm">cartes supportées</a>. 
+      Jetez un oeil a la page des <a href="../card-support/index.htm">cartes supportées</a>. 
       Elle ne sera évidemment jamais complète alors n'hésitez pas à nous contacter 
       pour nous faire part de votre expérience avec telle ou telle carte.
       <p> <i>cette liste est initialement basée sur celle associée au driver linux 
@@ -363,7 +363,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="../images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
