--- a/htdocs/Developer_docs.htm
+++ b/htdocs/Developer_docs.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>Untitled Document</title>
+<title>dTV -- Developer Docs</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -23,9 +23,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -34,7 +34,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       Documentation &nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -58,7 +58,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p>The software talks directly to the bt8x8 chip on whatever PCI card you 
         have installed.&nbsp; It would be very sensible to read the data sheet 
         for this card to get an idea of how the chip works and hopefully be able 
-        to work out some of the code.&nbsp; Get the datasheet from <a href="http://www.conexant.com/techinfo/ShowFiles.asp?ID=108&amp;ST=C">Conexant</a>.</p>
+        to work out some of the code.&nbsp; Request the datasheet from <a href="http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">Conexant</a>
+      here.</p>
       <p>The code for the linux drivers that forms the basis for Multidec can 
         be found <a href="http://me.in-berlin.de/~kraxel/bttv.html">here</a>.&nbsp; 
         This is a much later version than the one used by MultiDec so it is more 
@@ -124,7 +125,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
