--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -23,9 +23,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -33,7 +33,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Links&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -49,7 +49,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <a href="http://www.geocities.com/virtualdub/">VirtualDub</a><br>
           <a href="http://home.bip.net/gunnart/video/">Gunnar Thalin's VirtualDub 
           Plug-ins</a><br>
-          <a href="http://www.core.binghamton.edu/%7Einsomnia/gatos/">GATOS</a></p>
+          <a href="http://www.linuxvideo.org/gatos/">GATOS</a></p>
       </blockquote>
       <h3><br>
         Discussion</h3>
@@ -85,7 +85,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
