--- a/htdocs/bugs/Bugs_106b4.htm
+++ b/htdocs/bugs/Bugs_106b4.htm
@@ -21,26 +21,26 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </head>
 
 <body bgcolor="#FFFFFF">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" height="688">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="160"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="342"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="501"><img src="../images/spacer.gif" width="83" height="42"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
+    <td width="160" height="142"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td colspan="2" align="right" valign="bottom" height="142">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Known 
       Bugs &amp; Issues&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3" height="6"><img src../images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3" height="411"><!-- #BeginEditable "Text" --> 
       <p>dTV is still in the early stages of development.&nbsp; It will probably 
         never be truly stable and shrink-warp quality.&nbsp; That being said the 
         developers are keen to have the software running as well as possible.&nbsp; 
@@ -78,18 +78,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+    <td colspan="3" height="21"> 
+      <div align="center"><img src="../images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"> 
+    <td colspan="3" height="40"> 
       <div align="center"><a href="../index.php" class="bottommenu">home</a> | <a href="../about.htm" class="bottommenu">about</a> 
         | <a href="../Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="../screenshots/index.htm" class="bottommenu">screenshots</a> 
         | <a href="../downloads.htm" class="bottommenu">download</a> 
