--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -23,9 +23,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -33,7 +33,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developers&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -91,12 +91,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         for Windows 9x.</p>
       <h2> <br>
         BT848 Links</h2>
-      <p><a href="http://www.conexant.com/techinfo/ShowFiles.asp?ID=108&amp;ST=C">BT848 
-        </a><a href="http://www.conexant.com/techinfo/ShowFiles.asp?ID=108&amp;ST=C">Technical 
-        Docs at Conexant</a></p>
+      <p><a href="http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">BT878a
+      page at Conexant</a></p>
       <p><a href="http://me.in-berlin.de/~kraxel/bttv.html">bttv - Linux Driver 
         - Without this none of this would have been possible</a></p>
-      <p><a href="http://www.freebsd.org/~ahasty/Bt848.html">FreeBSD B</a><a href="http://www.freebsd.org/~ahasty/Bt848.html">t848 
+      <p><a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD B</a><a href="http://vulture.dmem.strath.ac.uk/bt848/">t848 
         Driver Project</a></p>
       <h2><br>
         AVScience Threads</h2>
@@ -124,7 +123,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
       <h2><br>
         Other Downloads</h2>
-      <p>Initial Test version of a DirectShow Filter (see the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi/Deinterlace/?cvsroot=deinterlace">project 
+      <p>Initial Test version of a DirectShow Filter (see the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">project 
         CVS</a>)</p>
       <!-- #EndEditable --></td>
   </tr>
@@ -133,7 +132,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
