--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -21,25 +21,60 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </head>
 
 <body bgcolor="#FFFFFF">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" height="1818">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="5" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
+    <td width="160" height="142"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td colspan="2" align="right" valign="bottom" height="142">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Download&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3" height="6"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="20">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3" height="1542"><!-- #BeginEditable "Text" --> 
+      <p>Version 2.1.1&#151;<b>Beta</b>&#151;[<a href="distributions/dTV211exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme211.htm">README</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Preliminary judder fix<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new 2-Frame Deinterlacing algorithm<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tom's new Greedy Deinterlacing algorithm
+      (this is low CPU, it is greedy because it eats one field)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new Temporal Noise Filter (to
+      switch on/off press n)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Better PAL 2:2 pulldown detection (It's
+      still not perfect though)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pixel width selection for game console
+      support<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Window Position selection for use with
+      aspect ratio controls<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Snapshots now in TIFF format<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Should start correctly from a shortcut<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Many code optimizations for SSE and 3DNOW!
+      processors<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Adaptive deinterlace now
+      separate method<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Scaler bob deinterlacing method<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Extensive card and
+      audio recognition improvements from Mike<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Extensive reworking of parameters and
+      defaults.<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Audio
+      start/stop/save/restore on entry<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The ability to have multiple named .ini
+      files.<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Adv Video Flags now
+      saved and specified in ini file<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Deinterlace mode and
+      many other status items now kept in ini file.</font><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </p>
       <p>Version 2.0.2&#151;<b>Stable</b><b></b>&#151;[<a href="distributions/dTV202exe.zip">Binary 
         Zipped</a>] [<a href="distributions/dTV202src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Windows 2000 driver code was
@@ -177,18 +212,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+    <td colspan="3" height="21"> 
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"> 
+    <td colspan="3" height="40"> 
       <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
         | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
         | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
