--- a/htdocs/CVS_Instructions.htm
+++ b/htdocs/CVS_Instructions.htm
@@ -22,26 +22,26 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </style>
 </head>
 <body bgcolor="#FFFFFF">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" height="1051">
   <tr> 
-    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="3" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="3" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="3" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->CVS 
+    <td width="160" height="142"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td colspan="2" align="right" valign="bottom" height="142"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->CVS 
       Instructions &nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3" height="4"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>(1) Download WinCVS from <a href="http://www.cvsgui.org/">http://www.wincvs.org</a>. 
+    <td colspan="3" height="793"><!-- #BeginEditable "Text" --> 
+      <p>(1) Download WinCVS from <a href="http://www.cvsgui.org/">http://www.cvsgui.org</a>. 
         Install it.</p>
       <p>(2) Download the windows setup program from <a href="http://download.sourceforge.net/sfsetup/sfsetup-v1.2.zip">http://download.sourceforge.net/sfsetup/sfsetup-v1.2.zip</a>. 
         Unzip into a directory such as C:\SSH. Then run sfsetup.exe... It may 
@@ -81,29 +81,29 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         the "Password:" prompt. There will be no echo. Just type your password 
         and then hit Enter.</p>
       <p>(10) WinCVS should now be checking out the code.</p>
-      <p>(11) For those who will be making edits to the code, you can do so with 
-        impugnity. Make your edits and submit them to the CVS by first selecting 
+      <p>(11) For those who will be making edits to the code, you can do so with
+      impunity. Make your edits and submit them to the CVS by first selecting 
         the file. Choose Modify-Update Selection from the menu. This merges your 
         local changes with the CVS code. Next, choose Modify-Commit Selection. 
         This will make the changes in the CVS.</p>
       <p><b>Note</b>: Sourceforge has recently changed its public keys for ssh 
-        access. Cevelopers who checked out the code before this change may need 
+        access. Developers who checked out the code before this change may need 
         to delete all instances of the file &quot;known_hosts&quot; before proceeding.</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
+    <td colspan="3" height="6"> 
       <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
-    <td colspan="3">&nbsp;</td>
+    <td colspan="3" height="21">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"> 
+    <td colspan="3" height="40"> 
       <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
         | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
         | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
