--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -40,7 +40,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3" height="1542"><!-- #BeginEditable "Text" --> 
-      <p>Version 2.1.1&#151;<b>Beta</b>&#151;[<a href="distributions/dTV211exe.zip">Binary 
+      <p>Version 2.1.2&#151;<b>Beta</b>&#151;[<a href="distributions/dTV211exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Advanced flags fixes&nbsp;<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mpact2 24 bit mode fix (works but you can't
+      see menu or OSD)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tuner menu option fix.
+      </p>
+      <p><br>
+      Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV211exe.zip">Binary 
         Zipped</a>] [<a href="distributions/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Preliminary judder fix<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new 2-Frame Deinterlacing algorithm<br>
