--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -54,7 +54,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h3><br>
         Discussion</h3>
       <blockquote> 
-        <p><a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">dTV 2.0.2 
+        <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV
+        2.1.2 
+          Release Thread</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005917.html">dTV 2.0.2 
           Release Thread</a> (AVS Forum)<br>
           <a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
           Release Thread</a> (AVS Forum)<br>
